codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_sub_agent_activity_renders_once.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1217
expression: rendered
---
• Completed `/root/researcher` (<agent-thread-id>)
