codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bridge_tool_activity_row.snap
---
source: tui/src/chatwidget/tests/bridge_tool_activity_tests.rs
assertion_line: 107
expression: terminal.backend()
---
"• Running Bash (7s • esc to interrupt)                                          "
